--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
+        "sass": "^1.62.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.0",
+        "bootstrap-icons": "^1.10.5"
     }
 }
