--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.4.0",
         "bootstrap": "^5.3.0",
         "bootstrap-icons": "^1.10.5",
+        "ckeditor": "^4.12.1",
+        "ckeditor5": "^38.1.1",
+        "jquery": "^3.7.0",
+        "mathjax": "^3.2.2",
         "uikit": "^3.16.19"
     }
 }
