--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "ckeditor5": "^38.1.1",
         "jquery": "^3.7.0",
         "mathjax": "^3.2.2",
+        "prismjs": "^1.29.0",
         "uikit": "^3.16.19"
     }
 }
